--- a/index.html
+++ b/index.html
@@ -3,103 +3,112 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MI PORTAFOLIO</title>
+    <title>EL NIDO DEL CRAVING</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="Apoyoindex.css">
+    <link rel="stylesheet" href="ApoyoExamen.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-<body>
+  <body>
+    <div class="container">
+      <div class="side-bar left"></div>
+      <div class="side-bar right"></div>
 
-    <header>
-        <h1>Portafolio de Evidencias</h1>
-        <p>¡Bienvenido/a! En este espacio te muestro mis actividades realizadas para la Experiencia Educativa de Proyecto Web:)</p>
-    </header>
+      <div class="content">
+        <header>
+          <img src="img/DALL·E 2024-10-10 11.59.44 - A minimalist logo design for a fast food restaurant called 'El Nido del Craving'. The design should focus on clean, simple lines and a modern aestheti.webp"class="logo">
+          <h1>Bienvenidos a El Nido del Craving</h1>
+          <p>¡El lugar perfecto para disfrutar de hamburguesas, pizzas y yogurt en Xalapa!</p>
+        </header>
 
-    <nav>
-        <a href="#about">Sobre mí</a>
-        <a href="https://www.canva.com/design/DAGbh5yceOc/OaQcIKydhv4LHi4nk7qBsw/edit">Actividad 1</a>
-        <a href="EM1.html">Actividad 2 (A)</a>
-        <a href="EmpresaMultinacional.html">Actividad 2 (B)</a>
-        <a href="https://fatimahernandez-7.github.io/Mi-Sitio-Web/">Actividad 3</a>
-        <a href="https://fatimahernandez-7.github.io/actividad-bootstrap/">Actividad 5</a>
-        <a href="">Actividad 6</a>
-        <a href="https://fatimahernandez-7.github.io/examen-proyecto-web/">Examen</a>
-        <a href="">Proyecto Final</a>
-        <a href="#contact">Contacto</a>
-    </nav>
+        <nav>
+          <a href="#about">Nuestras instalaciones</a>
+          <a href="#promotions">Nuestras Promociones</a>
+          <a href="#ub">Visítanos</a>
+        </nav>
 
-    <section class="hero">
-        <h1>Hola, soy Fátima Hernández</h1>
-        <p>Este portafolio muestra todo el trabajo que he realizado a lo largo de este periodo intersemestral para la Experiencia Educativa de Proyecto Web. ¡Puedes explorarlo con tranquilidad!</p>
-    </section>
+        <section class="hero">
+          <h1>¡Hola, bienvenidos/as!</h1>
+          <p>En el Nido del Craving sabemos lo que los estudiantes necesitan: comida deliciosa, rápida y accesible. Ya sea que estés buscando un almuerzo rápido entre clases o un lugar cómodo para relajarte con amigos, ¡tenemos lo que necesitas!</p>
+        </section>
 
-    <section id="about">
-      <h2>Sobre mí</h2>
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="false">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/c1.jpg" class="d-block w-35" alt="Foto 1">
+        <section id="about">
+          <h2>Conoce nuestras instalaciones</h2>
+          <p>Contamos con:</p>
+          <ol>
+            <li>Un amplio y acogedor comedor perfecto para relajarte y disfrutar de tus comidas.</li>
+            <li>Zona de pedidos rápida para llevar tus alimentos sin que debas de esperar demasiado.</li>
+            <li>¿Necesitas terminar una tarea o trabajar en algún proyecto? ¡No te preocupes! También contamos con un área de estudio con Wi-Fi gratuito, ideal para terminar tus pendientes y comer algo delicioso.</li>
+          </ol>
+        </section>
+
+        <section id="promotions">
+          <h2>Nuestras Promociones</h2>
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000" data-bs-pause="false">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/burger.webp" class="d-block w-100" alt="Hamburguesa">
+              </div>
+              <div class="carousel-item">
+                <img src="img/pizza.webp" class="d-block w-100" alt="Pizza">
+              </div>
+              <div class="carousel-item">
+                <img src="img/yogurt.webp" class="d-block w-100" alt="Yogurt">
+              </div>
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="img/c2.jpg" class="d-block w-35" alt="Foto 2">
+
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <h3>Combo Estudiante</h3>
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Hamburguesa + Papas + Refresco por solo $79.00 MXN
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <h3>Pizza 2x1</h3>
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Todos los martes y jueves disfruta de nuestras pizzas al 2x1
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <h3>Yogurt Especial</h3>
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Lleva un yogurt con toppings gratis al comprar cualquier combo.
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="img/c3.jpg" class="d-block w-35" alt="Foto 3">
-          </div>
-          <div class="carousel-item">
-            <img src="img/c4.jpg" class="d-block w-35" alt="Foto 4">
-          </div>
-          <div class="carousel-item">
-            <img src="img/c5.jpg" class="d-block w-35" alt="Foto 5">
-          </div>
-          <div class="carousel-item">
-            <img src="img/c6.jpg" class="d-block w-35" alt="Foto 6">
-          </div>
-          <div class="carousel-item">
-            <img src="img/c7.jpg" class="d-block w-35" alt="Foto 7">
-          </div>
-        </div>
+        </section>
+
+        <section id="ub">
+          <h2>Visítanos</h2>
+          <p>¡Ven a conocernos!, estamos ubicados a solo unos minutos de la universidad.</p>
+          <a href="https://www.google.com.mx/maps/place/Arco+Sur+Paseo+112+lote+2,+Campo+Nuevo,+91097+Xalapa-Enr%C3%ADquez,+Ver./@19.507811,-96.8904904,17z/data=!3m1!4b1!4m6!3m5!1s0x85db32481238ef93:0xeb45264283fcdacd!8m2!3d19.507806!4d-96.8879155!16s%2Fg%2F11b8vfqn7v?entry=ttu&g_ep=EgoyMDI1MDExNS4wIKXMDSoASAFQAw%3D%3D">Arco Sur Paseo 112 lote 2, Campo Nuevo, 91097 Xalapa-Enríquez, Ver., México</a>
+        </section>
+
+        <footer>
+          <p>&copy; 2025 Nido del Craving. Todos los derechos reservados. (Realizado por Fátima Hernández 20/Enero/2025)</p>
+        </footer>
       </div>
-    </section>
-  </section>
-      <p>Mi nombre completo es Fátima Elizabeth Hernández Flores, tengo 22 años y actualmente estudio la carrera de Administración de Negocios Internacionales y estoy por iniciar el 6to semestre de esta misma.</p>
-      <p>Me gusta mucho el deporte, la música, los animales y los videojuegos. Me gusta mucho pasar tiempo con mis amigos, considero que ellos son la curita que cubren mis heridas emocionales, por lo que les guardo mucho aprecio a todos. También, tengo una maravillosa novia con la que he compartido casi 3 años de mi corta vida, aunque reside en Monterrey, mi meta es poder vivir allá con ella:)</p>
-      <p>Espero que te agrade mi portafolio, podrás encontrar un poco más sobre mi forma de ser en algunas de las actividades.</p>
-  </section>
+    </div>
 
-    <section id="projects">
-        <h2>Unos secretitos por ahí...</h2>
-        <div class="projects">
-            <div class="project">
-                <h3>Comida</h3>
-                <p>Me gustan mucho las cosas saladas (comida y botanas), de hecho ¡odio el chocolate!</p>
-            </div>
-            <div class="project">
-                <h3>Animales</h3>
-                <p>Soy fan de los perros, en casa tengo 2 pequeños panzones llamados Capuchino y Canica. Son mi adoración.</p>
-            </div>
-            <div class="project">
-                <h3>Personalidad</h3>
-                <p>Soy muy <em>silly</em> cuando entro en confianza, pero también tengo un lado sensible, por lo que puedo molestarme con facilidad.</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact">
-      <h2>Contacto</h2>
-      <p>¡Puedes seguirme en mis redes sociales si gustas!</p>
-      <ul>
-          <li><a href="https://www.linkedin.com/in/f%C3%A1tima-elizabeth-hern%C3%A1ndez-flores-558447303?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app " target="_blank">LinkedIn</a></li>
-          <li><a href="https://www.facebook.com/fatimaelizabeth.flores?locale=es_LA" target="_blank">Facebook</a></li>
-          <li><a href="https://www.instagram.com/baby_santiflores?igsh=MWwyZ3VqeXpvbGE1cw%3D%3D&utm_source=qr" target="_blank">Instagram</a></li>
-          <li><a href="https://x.com/ftimaeliza91182?s=11" target="_blank">X (Twitter)</a></li>
-          <li><a href="https://discord.com" target="_blank">Discord: jaibitaveracruzana</a></li>
-      </ul>
-  </section>
-  
-    <footer>
-        <p>&copy; 2025 Portafolio realizado por Fátima Hernández. Todos los derechos reservados.</p>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
-</html> 
+</html>
